# Quokka

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md
qk_data/: Cargo.toml
qk_data/src/: data_stream.rs  execute_function_trace_event.rs  lib.rs  mfarity.rs  send_message_event.rs  stream_event.rs
qk_data/src/data_stream/: eflame_log.rs  mod.rs  t_data_stream.rs
qk_data/src/data_stream/eflame_log/: defs.rs  errors.rs  mod.rs  parser.rs
qk_data/src/data_stream/eflame_log/parser/: atom.rs  mod.rs
qk_livesystem/: Cargo.toml  README.md
qk_livesystem/src/: beam_cluster.rs  beam_node.rs  beam_process.rs  force_directed_layout.rs  lib.rs  live_system.rs
qk_livesystem/src/code_server/: beam_function.rs  beam_module.rs  mod.rs
qk_livesystem/src/ui/: draw.rs  layout.rs  mod.rs  point.rs  rect.rs  size.rs  styling.rs  ui_element_state.rs
qk_livesystem/src/ui/styling/: font_style.rs  line_style.rs  mod.rs  style_color.rs
qk_term/: Cargo.toml
qk_term/src/: atom.rs  binary.rs  funarity.rs  lib.rs  mfarity.rs  pid.rs  term.rs
src/: main.rs  my_types.rs  w_main.rs
src/app/: mod.rs
src/ui/: controls.rs  mod.rs  startup.rs
src/window/main/: app.rs  app_state.rs  code_selection.rs  content.rs  gui.rs  mod.rs  node_selection.rs  pointer_mode.rs  process_selection.rs  selection.rs  window_header.rs
