[package]
name = "quokka"
version = "0.1.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qk_data = { path = "qk_data" }
qk_term = { path = "qk_term" }
qk_livesystem = { path = "qk_livesystem" }

chrono = "0.4"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
once_cell = "1.2.0"
gtk = { version = "0.9.2", features = ["v3_22"] }
gdk = "0.13.2"
cairo-rs = { version = "0.9.1", features = ["png"] }
gio = "0.9.1"

[dependencies.pangocairo]
optional = true

#[dependencies.cairo]
#package = "cairo-rs"
#features = ["png"]
#optional = true

#[dependencies.async-tls]
#version = "0.11"
#optional = true
