[package]
name = "qk_data"
version = "0.1.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qk_term = { path = "../qk_term" }
chrono = "0.4.0"
bitflags = "1.2.1"
nom = "6.1"
