[package]
name = "qk_livesystem"
version = "0.1.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qk_term = { path = "../qk_term" }
qk_data = { path = "../qk_data" }
chrono = "0.4.19"
imgui = "0.7.0"
#cairo-rs = { version = "0.9.1", features = ["png"] }
petgraph = "0.5.1"
rand = "0.8.3"